Removed unrequired migrate;

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Install dependencies
       uses: garygrossgarten/github-action-ssh@release
       with:
-        command: cd ${{ env.APP_LOCATION }} && yarn install && yarn migrate
+        command: cd ${{ env.APP_LOCATION }} && yarn install
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         privateKey: ${{ secrets.SERVER_SSH_KEY }}
